# benchflow

./: .gitignore  404.html  BENCHMARK_RESULTS.md  CHANGELOG.md  CITATION.cff  ISSUES.md  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish.yml
architecture/: index.html
benchflow/: __init__.py
benchflow/cli/: main.py  progress.py
benchflow/core/: result.py
benchflow/core/metrics/: aggregator.py  histogram.py
benchflow/workers/: protocol.py
changelog/: index.html
concepts/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  concepts.md  contributing.md  index.md  methodology.md  quickstart.md  reproducibility.md  scenario-reference.md
examples/: analytical_aggregation.yaml  connection_pool_stress.yaml  index_scan_vs_seq_scan.yaml  mixed_read_write.yaml  oltp_point_lookups.yaml
methodology/: index.html
quickstart/: index.html
reproducibility/: index.html
scenario-reference/: index.html
scenarios/: basic.yaml  cubrid_mysql_delete.yaml  cubrid_mysql_insert.yaml  cubrid_mysql_select_full.yaml  cubrid_mysql_select_pk.yaml  cubrid_mysql_update.yaml  driver_compare_insert.yaml  driver_compare_select_full.yaml  driver_compare_select_pk.yaml  driver_compare_update.yaml
search/: search_index.json
tests/: test_aggregation.py  test_experiment.py  test_histogram.py  test_loader.py  test_metrics.py  test_result.py  test_result_v2.py  test_runner.py  test_runner_v2.py  test_scenario.py
tests/integration/: test_cli.py  test_e2e.py
(+8 files in other folders)
